<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Weather</string>
    <!---activity_settings.xml-->
    <string name="status" tools:ignore="MissingTranslation">Status</string>
    <string name="logo" tools:ignore="MissingTranslation">Logo</string>
    <string name="city" tools:ignore="MissingTranslation">City</string>
    <string name="detect_location" tools:ignore="MissingTranslation">Detect location</string>
    <string name="detect_location_automatic" tools:ignore="MissingTranslation">Detect location automatically</string>
    <string name="detect_location_search" tools:ignore="MissingTranslation">Getting your location…</string>
    <string name="detect_location_not_found" tools:ignore="MissingTranslation">Location not found. Please try again.</string>
    <string name="detect_location_activate" tools:ignore="MissingTranslation">Location is not enabled. Activate it to use the function.</string>
    <string name="detect_location_permission_not_granted" tools:ignore="MissingTranslation">Location Permissions not granted.
\nGrant it in the settings (GPS icon).</string>
    <string name="detect_location_new_location" tools:ignore="MissingTranslation">New Location detected. Restart with new location…</string>
    <string name="api_key" tools:ignore="MissingTranslation">API key (click for info)</string>
    <string name="enter_your_openweathermap_api_key" tools:ignore="MissingTranslation">Enter your own API key</string>
    <string name="submit_data" tools:ignore="MissingTranslation">Submit data</string>
    <!-- UI_Settings -->
    <string name="UiSettings" tools:ignore="MissingTranslation">UI Settings</string>
    <string name="unit1" tools:ignore="MissingTranslation">Units (Temp | Wind)</string>
    <string name="unit2" tools:ignore="MissingTranslation">Units (Rain | Pressure)</string>
    <string name="chooseTheme" tools:ignore="MissingTranslation">Theme:</string>
    <string name="gradient" tools:ignore="MissingTranslation">Gradient</string>
    <string name="coloured_status_icons" tools:ignore="MissingTranslation">Coloured status icons</string>
    <string name="TimeFormat" tools:ignore="MissingTranslation">24-hour format</string>
    <string name="ChooseLang" tools:ignore="MissingTranslation">Choose Language</string>
    <string name="choose_city" tools:ignore="MissingTranslation">Choose your city:</string>
    <string name="abort" tools:ignore="MissingTranslation">Abort</string>
    <string name="error_occurred" tools:ignore="MissingTranslation">An error occurred, old data will be loaded! You have probably reached the API limit or no connection…</string>
    <string name="error_1" tools:ignore="MissingTranslation">The API key is not active or not specified!</string>
    <string name="error_2" tools:ignore="MissingTranslation">The city is invalid or not specified!</string>
    <string name="error_3" tools:ignore="MissingTranslation">Please check your internet connection!</string>
    <string name="reportError" tools:ignore="MissingTranslation">Found a mistake\? Strange behaviour\?
\nReport it on <a href="https://codeberg.org/BeoCode/Weather/issues">Codeberg</a> or via <a href="mailto:weather@beocode.eu">email</a></string>
    <string name="created_by" tools:ignore="MissingTranslation">Created by <a href="https://codeberg.org/BeoCode/Weather">BeoCode</a> licensed under <a href="https://codeberg.org/BeoCode/Weather/src/branch/main/LICENSE">EUPL-1.2</a></string>
    <string name="OWM" tools:ignore="MissingTranslation">Data provided by <a href="https://openweathermap.org/">OpenWeatherMap</a> licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a></string>
    <string name="Icons" tools:ignore="MissingTranslation"><a href="https://erikflowers.github.io/weather-icons/">Icons</a> by <a href="https://www.twitter.com/erik_flowers">E. Flowers</a> &amp; <a href="https://www.twitter.com/artill">L. Bischoff</a> licensed under <a href="https://scripts.sil.org/OFL">SIL OFL 1.1</a></string>
    <!-- Conf_Widget -->
    <string name="app_widget" tools:ignore="MissingTranslation">Current weather</string>
    <string name="day_forecast_widget" tools:ignore="MissingTranslation">Day Forecast</string>
    <string name="hour_forecast_widget" tools:ignore="MissingTranslation">Hour Forecast</string>
    <string name="time_widget" tools:ignore="MissingTranslation">Clock with current weather</string>
    <string name="configureWidget" tools:ignore="MissingTranslation">Configure widget</string>
    <string name="widgetBackTrans" tools:ignore="MissingTranslation">Make widget background transparent</string>
    <string name="ShowUpdatedAt" tools:ignore="MissingTranslation">Don\'t show \"Updated:\"</string>
    <string name="highlightDay" tools:ignore="MissingTranslation">Highlight day</string>
    <string name="widgetColour" tools:ignore="MissingTranslation">Customize widget colour</string>
    <string name="red" tools:ignore="MissingTranslation">Red</string>
    <string name="green" tools:ignore="MissingTranslation">Green</string>
    <string name="blue" tools:ignore="MissingTranslation">Blue</string>
    <string name="widgetUpdateInterval" tools:ignore="MissingTranslation">Set widget update interval (for all widgets)</string>
    <string name="widgetUpdateIntervalUnit" tools:ignore="MissingTranslation">min</string>
    <string name="widgetUpdateIntervalToShort" tools:ignore="MissingTranslation">Note: Such a short update interval is not allowed for the standard key. The update interval has therefore been set to 30 minutes.</string>
    <!---activity_main.xml-->
    <string name="updated" tools:ignore="MissingTranslation">Updated:</string>
    <string name="weatherMaps" tools:ignore="MissingTranslation">Weather maps</string>
    <string name="feels" tools:ignore="MissingTranslation">Feels like</string>
    <string name="weatherAlerts" tools:ignore="MissingTranslation">There are weather alerts…</string>
    <string name="daytime" tools:ignore="MissingTranslation">Daytime</string>
    <string name="sunrise" tools:ignore="MissingTranslation">Sunrise</string>
    <string name="sunset" tools:ignore="MissingTranslation">Sunset</string>
    <string name="wind" tools:ignore="MissingTranslation">Wind</string>
    <string name="pressure" tools:ignore="MissingTranslation">Pressure</string>
    <string name="humidity" tools:ignore="MissingTranslation">Humidity</string>
    <string name="rain" tools:ignore="MissingTranslation">Rain</string>
    <string name="rainCloud" tools:ignore="MissingTranslation">Rain &amp; Cloudiness</string>
    <string name="rainRadar" tools:ignore="MissingTranslation">Rain radar</string>
    <string name="snow" tools:ignore="MissingTranslation">Snow</string>
    <string name="cloudiness" tools:ignore="MissingTranslation">Cloudiness</string>
    <string name="visibility" tools:ignore="MissingTranslation">Visibility</string>
    <string name="uvIndex" tools:ignore="MissingTranslation">UV Index</string>
    <string name="windGust" tools:ignore="MissingTranslation">Wind Gust</string>
    <string name="temperature" tools:ignore="MissingTranslation">Temperature</string>
    <string name="Min" tools:ignore="MissingTranslation">Min</string>
    <string name="Max" tools:ignore="MissingTranslation">Max</string>
    <!---Fragments-->
    <string name="date" tools:ignore="MissingTranslation">dd.MM.yyyy</string>
    <string name="daymonthdate" tools:ignore="MissingTranslation">E, dd.MM</string>
    <string name="today" tools:ignore="MissingTranslation">Today</string>
    <string name="tomorrow" tools:ignore="MissingTranslation">Tomorrow</string>
    <string name="save" tools:ignore="MissingTranslation">Save</string>
    <string name="add" tools:ignore="MissingTranslation">Add</string>
    <string name="options" tools:ignore="MissingTranslation">Options</string>
    <string name="switchCity" tools:ignore="MissingTranslation">Swap %1$s with the main city (%2$s)</string>
    <string name="removeCity" tools:ignore="MissingTranslation">Delete %s</string>
    <string name="alarm" tools:ignore="MissingTranslation">Alarm</string>
    <string name="themes_system" tools:ignore="MissingTranslation">System (Light/Dark)</string>
    <string name="themes_light" tools:ignore="MissingTranslation">Light</string>
    <string name="themes_dark" tools:ignore="MissingTranslation">Dark</string>
    <string name="themes_red" tools:ignore="MissingTranslation">Red</string>
    <string name="themes_sand" tools:ignore="MissingTranslation">Sand</string>
    <string name="themes_blue" tools:ignore="MissingTranslation">Blue</string>
    <string name="themes_amoled" tools:ignore="MissingTranslation">AMOLED (Black)</string>
    <string name="degree_north" tools:ignore="MissingTranslation">N</string>
    <string name="degree_north_north_east" tools:ignore="MissingTranslation">NNE</string>
    <string name="degree_north_east" tools:ignore="MissingTranslation">NE</string>
    <string name="degree_east_north_east" tools:ignore="MissingTranslation">ENE</string>
    <string name="degree_east" tools:ignore="MissingTranslation">E</string>
    <string name="degree_east_south_east" tools:ignore="MissingTranslation">ESE</string>
    <string name="degree_south_east" tools:ignore="MissingTranslation">SE</string>
    <string name="degree_south_south_east" tools:ignore="MissingTranslation">SSE</string>
    <string name="degree_south" tools:ignore="MissingTranslation">S</string>
    <string name="degree_south_south_west" tools:ignore="MissingTranslation">SSW</string>
    <string name="degree_south_west" tools:ignore="MissingTranslation">SW</string>
    <string name="degree_west_south_west" tools:ignore="MissingTranslation">WSW</string>
    <string name="degree_west" tools:ignore="MissingTranslation">W</string>
    <string name="degree_west_north_west" tools:ignore="MissingTranslation">WNW</string>
    <string name="degree_north_west" tools:ignore="MissingTranslation">NW</string>
    <string name="degree_north_north_west" tools:ignore="MissingTranslation">NNW</string>
    <string name="temp_kelvin" tools:ignore="MissingTranslation">K</string>
    <string name="temp_celsius" tools:ignore="MissingTranslation">°C</string>
    <string name="temp_fahrenheit" tools:ignore="MissingTranslation">°F</string>
    <string name="speed_meters_per_seconds" tools:ignore="MissingTranslation">m/s</string>
    <string name="speed_kilometers_per_hour" tools:ignore="MissingTranslation">km/h</string>
    <string name="speed_miles_per_hour" tools:ignore="MissingTranslation">mph</string>
    <string name="speed_beaufort" tools:ignore="MissingTranslation">bft</string>
    <string name="speed_knot" tools:ignore="MissingTranslation">kn</string>
    <string name="distance_millimeter" tools:ignore="MissingTranslation">mm</string>
    <string name="distance_inch" tools:ignore="MissingTranslation">in</string>
    <string name="pressure_hectopascal" tools:ignore="MissingTranslation">hPa</string>
    <string name="pressure_kilopascal" tools:ignore="MissingTranslation">kPa</string>
    <string name="pressure_millimeters_of_mercury" tools:ignore="MissingTranslation">mm Hg</string>
    <string name="pressure_inch_of_mercury" tools:ignore="MissingTranslation">in Hg</string>
    <string name="pressure_pounds_per_square_inch" tools:ignore="MissingTranslation">psi</string>
    <string name="pressure_atmosphere" tools:ignore="MissingTranslation">atm</string>
</resources>