<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/UiSettings"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center_horizontal"
            android:text="@string/unit1"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">

            <Spinner
                android:id="@+id/UnitTemp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0.55"
                android:popupBackground="?colorPrimaryDark"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/UnitSpeed"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0.5"
                android:popupBackground="?colorPrimaryDark"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center_horizontal"
            android:text="@string/unit2"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">

            <Spinner
                android:id="@+id/UnitDistance"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0.5"
                android:popupBackground="?colorPrimaryDark"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/UnitPressure"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0.5"
                android:popupBackground="?colorPrimaryDark"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center_horizontal"
            android:text="@string/chooseTheme"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/Theme"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:dropDownSelector="?attr/frontColor"
            android:popupBackground="?colorPrimaryDark"
            android:spinnerMode="dropdown" />

        <CheckBox
            android:id="@+id/Gradient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/gradient"
            android:textColor="?attr/frontColor"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/coloured_status_icons"
            android:textColor="?attr/frontColor"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/TimeFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/TimeFormat"
            android:textColor="?attr/frontColor"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/AutoLocDetect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/detect_location_automatic"
            android:textColor="?attr/frontColor"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center_horizontal"
            android:text="@string/ChooseLang"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/Lang"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:dropDownSelector="?attr/frontColor"
            android:popupBackground="?colorPrimaryDark"
            android:spinnerMode="dropdown" />

    </LinearLayout>

</ScrollView>